--- a/action.yaml
+++ b/action.yaml
@@ -1,6 +1,6 @@
 name: "Sonar-Qube Scan"
 description: "Scan your code with SonarQube Scanner to detect bugs, vulnerabilities and code smells in more than 25 programming languages."
-author: "Dtltasu"
+author: "vasu"
 
 branding:
   icon: "check"
